# checkcert

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  checkcert.py  pyproject.toml
checkcert/: checkcert.py
ci/: test_domains.txt
completions/: checkcert-complete.sh  checkcert-complete.zsh
docs/: README.md
docs/source/: conf.py  index.rst  install.rst  introduction.rst  running.rst  shell_completion.rst
tests/: test_checkcert.py
