[tool.poetry]
name = "checkcert"
version = "0.1.0"
description = ""
authors = ["Alex Kelly <alex.kelly@franklin.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.19.2"
coverage = "^5.5"
pylint = "^2.11.1"
pyflakes = "^2.3.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
task-status = 'checkcert.checkcert:main'

[tool.semantic_release]
version_variable = [
    "task_status/task_status.py:__version__",
    "pyproject.toml:version"
]
